--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -27,7 +27,16 @@
 			android:entryValues="@array/settings_key_volume_step_size_values"
 			android:defaultValue="@string/settings_key_volume_step_size_default_value"
 			android:dialogTitle="@string/preference_volume_step"/>
-			
+		
+		
+		<CheckBoxPreference 
+			android:key="@string/settings_key_pause_on_call"
+			android:title="@string/pause_on_call_title" 
+			android:summaryOn="@string/pause_on_call_yes"
+			android:summaryOff="@string/pause_on_call_no" 
+			android:defaultValue="@bool/settings_key_pause_on_call_default"
+			/>
+		
         <CheckBoxPreference 
 		android:key="@string/settings_key_handle_back_hard_key"
 		android:title="@string/preference_handle_back_hard" 
