new animations. issue #4

--- a/res/layout/messages.xml
+++ b/res/layout/messages.xml
@@ -2,15 +2,12 @@
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/textMessages"
+	style="@android:style/TextAppearance.Medium"
+	android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:text=""
-	android:layout_height="wrap_content"
-	android:layout_width="wrap_content" 
 	android:gravity="center"
 	android:maxLines="1"
 	android:ellipsize="marquee"
-	android:textSize="13sp"
-	android:layout_centerInParent="true"
-	android:textColor="@android:color/white"
 	android:background="@drawable/message_background"
 	android:padding="16dp"
 	android:visibility="invisible"/>
