--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -70,7 +70,7 @@
 	<include layout="@layout/messages"
    		android:layout_centerInParent="true"
 		android:layout_height="wrap_content"
-		android:layout_width="fill_parent" />
+		android:layout_width="wrap_content" />
 		
 </RelativeLayout>
     
