--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background">
-    
+    <!-- 
     <LinearLayout android:id="@+id/serverTitleLayout"
         android:orientation="horizontal"
         android:gravity="center"
@@ -20,10 +20,11 @@
 	   		android:textSize="20sp"
    			android:textColor="@android:color/white"/>
 	</LinearLayout>
+	 -->
     <LinearLayout android:orientation="horizontal"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:weightSum="5"
-		android:layout_below="@id/serverTitleLayout"
+   		android:layout_alignParentTop="true"
 		android:layout_alignParentBottom="true"
 		>
 		<LinearLayout android:id="@+id/controls_layout"
