--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background">
-    
+    <!-- 
     <LinearLayout android:id="@+id/serverTitleLayout"
         android:orientation="horizontal"
         android:gravity="center"
@@ -21,6 +21,7 @@
 	   		android:textSize="20sp"
    			android:textColor="@android:color/white"/>
 	</LinearLayout>
+	 -->
     <TextView
 		android:id="@+id/textNowPlayingTitle"
 		android:text=""
@@ -31,7 +32,7 @@
    		android:marqueeRepeatLimit="marquee_forever"
    		android:ellipsize="marquee"
    		android:textSize="18sp"
-   		android:layout_below="@id/serverTitleLayout"
+   		android:layout_alignParentTop="true"
    		android:textColor="@android:color/white"
 		/>
    	
