--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -15,5 +15,6 @@
   -->
 
 <resources>
-    <color name="actionbar_title_color">#224894</color>
+    <item type="id" name="actionbar_compat" />
+    <item type="id" name="actionbar_compat_title" />
 </resources>
