--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,39 +4,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background">
-    <!-- 
-    <LinearLayout android:id="@+id/serverTitleLayout"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_width="fill_parent" android:layout_height="wrap_content"
-   		android:layout_alignParentTop="true"
-   		android:layout_margin="4dp">
-        <TextView android:id="@+id/serverTitle"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-			android:maxLines="1"
-	   		android:marqueeRepeatLimit="marquee_forever"
-	   		android:ellipsize="marquee"
-	   		android:textSize="20sp"
-   			android:textColor="@android:color/white"/>
-	</LinearLayout>
-	 -->
-    <TextView
-		android:id="@+id/textNowPlayingTitle"
-		android:text=""
+    <include layout="@layout/media_title"
+   		android:id="@+id/media_title_layout"
 		android:layout_height="wrap_content"
-		android:layout_width="fill_parent" 
-		android:gravity="center"
-		android:maxLines="1"
-   		android:marqueeRepeatLimit="marquee_forever"
-   		android:ellipsize="marquee"
-   		android:textSize="18sp"
    		android:layout_alignParentTop="true"
-   		android:textColor="@android:color/white"
-		/>
+		android:layout_width="fill_parent"  />
    	
-   	<include layout="@layout/media_control_buttons"
+   	<include
+   	    layout="@layout/media_control_buttons"
    		android:id="@+id/controls_layout"
 		android:layout_alignParentBottom="true" 
 		android:layout_height="wrap_content" android:layout_width="fill_parent"/>
@@ -46,7 +21,7 @@
 		android:src="@drawable/no_media_background"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@id/textNowPlayingTitle"
+		android:layout_below="@id/media_title_layout"
 		android:layout_above="@id/controls_layout"
 		android:layout_margin="4dp"
 		/>
