--- a/res/layout/messages.xml
+++ b/res/layout/messages.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/textMessages"
 	style="@android:style/TextAppearance.Medium"
+	android:textColor="@android:color/white"
 	android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:text=""
 	android:gravity="center"
