--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -12,7 +12,7 @@
         android:id="@+id/menu_help"
         android:icon="@android:drawable/ic_menu_help"
         android:orderInCategory="101"
-        android:showAsAction="ifRoom"
+        android:showAsAction="never"
         android:title="@string/help"/>
     
     <item
