--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -17,7 +17,7 @@
     <ScrollView android:layout_width="wrap_content" android:layout_height="0px" android:layout_weight="1">
     	<LinearLayout 
 		    android:layout_width="wrap_content"
-		    android:layout_height="fill_parent"
+		    android:layout_height="wrap_content"
 		    android:orientation="vertical">
 	    	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 		    	android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
