--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/menu_settings"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:title="@string/settings"/>
     
     <item
