--- a/res/layout/nowplaying_progress.xml
+++ b/res/layout/nowplaying_progress.xml
@@ -15,6 +15,9 @@
         android:layout_width="fill_parent"
         android:layout_height="12dp"
         android:layout_alignParentTop="true"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:max="100" />
 
     <TextView
@@ -24,6 +27,9 @@
         android:layout_alignLeft="@id/progressTimeBar"
         android:layout_below="@id/progressTimeBar"
         android:layout_marginTop="4dp"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:gravity="left"
         android:text="00:00:00"
         android:textColor="#AAA" />
@@ -35,6 +41,9 @@
         android:layout_alignRight="@id/progressTimeBar"
         android:layout_below="@id/progressTimeBar"
         android:layout_marginTop="4dp"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:text="01:30:00"
         android:textColor="#AAA" />
 
